# topsh

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflow/: CI.yml
.github/workflows/: CI.yml  test_lint.yml
docs/: architecture.md
docs/diagram/: TopSHClassDiagram.vpp
src/: main.cpp
src/interpreter/: interpreter.h
src/interpreter/executor/: executor.h
src/interpreter/executor/command_executors/: assign_executor.h  cat_executor.h  command_executor.h  echo_executor.h  exit_executor.h  pwd_executor.h  wc_executor.h
src/interpreter/internal/: command.h  execute_result.h  executer_helper.h  raw_string.h
src/interpreter/parser/: parser.h
src/interpreter/storage/: storage.h
test/: hello_test.cpp
test/e2e/: e2e.py
test/unit/executor/: test_executor.cpp
test/unit/parser/: test_parser.cpp
